# Robosub_Simulation

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  README.md  cube.sdf  environment.yml  mySimpleWorld.world  myWorld.world  sources.list
.github/workflows/: proofofconcept_ci  proofofconcept_ci.yml
ProofOfConcept/: CMakeLists.txt  package.xml
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  robosub_simulator.pc  robosub_simulatorConfig.cmake
catkin_generated/stamps/robosub_simulator/: _setup_util.py.stamp  package.xml.stamp
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: robosub_simulator.pc
gazebo_plugin_tutorial/: hello_world.cc  model_push.cc
launch/: .gazebo.launch.swp
models/cube_model/: model.sdf
models/cube_with_thruster_model/cube_with_thruster/: model.config  model.sdf
models/realsense_camera/: model.sdf
models/sub_model/: model.config  model.sdf
scripts/: listener.py  talker.py
src/: CMakeLists.txt  CTestTestfile.cmake  RealSensePlugin.cpp  gazebo.launch  gazebo_ros_realsense.cpp  moc_model_push.cpp_parameters  moc_model_push_plugin.cpp_parameters  model_push.cc  model_push.cpp  model_push.h  model_push_plugin.cpp  model_push_plugin.h  thruster_pluginex.h  thrusterex.cpp  thrusterex.h
src/cube_model/: model.config
testProject_ws/devel/: .catkin  .rosinstall  setup.sh
worlds/: myWorld.world
(+1 files in other folders)
